--- a/i18n/he-IL.json
+++ b/i18n/he-IL.json
@@ -2,7 +2,7 @@
 	"working-project": "%projectName% עובד על ",
 	"working-no-project": "עובד על כמה דברים",
 	"editing-file": "%fileName% עורך",
-	"editing-idle": "לא עושה כלום",
+	"editing-idle": "לא פעיל",
 	"atom-description": "Atom עבוד עם",
 	"type-description": "%type% עורך קובץ",
 	"type-unknown": "עורך קובץ",
