Enhance polish translation

--- a/i18n/pl-PL.json
+++ b/i18n/pl-PL.json
@@ -3,7 +3,7 @@
 	"working-no-project": "Pracuje nad jakimiś rzeczami",
 	"editing-file": "Edytuje %fileName%",
 	"editing-idle": "Bezczynny",
-	"atom-description": "Używa Atom",
+	"atom-description": "Używa Atoma",
 	"type-description": "Edytuje plik %type%",
 	"type-unknown": "Edytuje jakiś plik",
 	"developer-idle": "Deweloper jest wystarczająco przepracowany, by odpocząć!"
