--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -6,5 +6,21 @@
 	"atom-description": "Working with Atom",
 	"type-description": "Editing a %type% file",
 	"type-unknown": "Editing a file",
-	"developer-idle": "The Developer is RESTful enough to rest!"
+	"developer-idle": "The Developer is RESTful enough to rest!",
+	"generate-failed": "Couldn't generate %file% in config directory.",
+	"generate-failed-desc": "While generating %file%, an error was thrown.",
+	"read-failed": "Couldn't read %file% in config directory.",
+	"read-failed-desc": "While reading %file%, an error was thrown.",
+	"write-failed": "Couldn't write %file% in config directory.",
+	"write-failed-desc": "While writing %file%, an error was thrown.",
+	"error-is-file": "Couldn't open atom-discord folder in config directory.",
+	"error-is-file-desc": "atom-discord is not a folder, it is a file!",
+	"error-is-file-detail": "Please check %directory%.",
+	"error-is-directory": "Couldn't open %file% in config directory.",
+	"error-is-directory-desc": "%file% is not a file, but a directory!",
+	"error-is-directory-detail": "Please check %directory%.",
+	"not-in-project": "No projects are opened!",
+	"custom-name": "Custom project name",
+	"custom-name-primary": "OK",
+	"custom-name-secondary": "USE DEFAULT"
 }
