--- a/i18n/ru-RU.json
+++ b/i18n/ru-RU.json
@@ -1,6 +1,6 @@
 {
 	"working-project": "Работает над %projectName%",
-	"working-no-project": "Работает на некоторыми вещами",
+	"working-no-project": "Работает над некоторыми вещами",
 	"editing-file": "Редактирует %fileName%",
 	"editing-idle": "Отошел",
 	"atom-description": "Работает в Atom",
