Fixed #70, Added many debugging options [WIP]

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -19,6 +19,9 @@
 	"error-is-directory": "Couldn't open %file% in config directory.",
 	"error-is-directory-desc": "%file% is not a file, but a directory!",
 	"error-is-directory-detail": "Please check %directory%.",
+	"error-no-discord": "Discord is not running!",
+	"error-no-discord-desc": "Unless discord is turned on and atom is restarted, rich presence will not be shown.",
+	"error-no-discord-detail": "You can suppress this notification in settings.",
 	"not-in-project": "No projects are opened!",
 	"custom-name": "Custom project name",
 	"custom-name-primary": "OK",
