--- a/i18n/ko-KR.json
+++ b/i18n/ko-KR.json
@@ -6,5 +6,24 @@
 	"atom-description": "아톰으로 코딩 중",
 	"type-description": "%type% 파일을 편집하고 있습니다.",
 	"type-unknown": "파일 편집 중",
-	"developer-idle": "개발자가 잠시 치킨을 뜯으러 간 것 같습니다."
+	"developer-idle": "개발자가 잠시 치킨을 뜯으러 간 것 같습니다.",
+	"generate-failed": "설정 디렉터리의 파일 %file% 생성하기에 실패했습니다.",
+	"generate-failed-desc": "파일 %file%(을)를 생성하는 중 에러가 발생했습니다.",
+	"read-failed": "설정 디렉터리의 파일 %file% 읽기에 실패했습니다.",
+	"read-failed-desc": "파일 %file%(을)를 읽는 중 에러가 발생했습니다.",
+	"write-failed": "설정 디렉터리의 파일 %file% 쓰기에 실패했습니다.",
+	"write-failed-desc": "파일 %file%(을)를 쓰는 중 에러가 발생했습니다.",
+	"error-is-file": "설정 디렉터리 내의 %directory% 폴더를 열 수 없습니다.",
+	"error-is-file-desc": "동일한 이름의 파일이 이미 존재합니다!",
+	"error-is-file-detail": "%directory%(을)를 체크해주세요.",
+	"error-is-directory": "설정 디렉터리 내의 %file% 파일을 읽을 수 없습니다.",
+	"error-is-directory-desc": "동일한 이름의 디렉터리가 이미 존재합니다!",
+	"error-is-directory-detail": "%directory%(을)를 체크해주세요.",
+	"error-no-discord": "디스코드가 실행중이 아닙니다!",
+	"error-no-discord-desc": "디스코드를 켠 후 아톰을 재시작하지 않을 시, Rich Presence가 보여지지 않을 것입니다.",
+	"error-no-discord-detail": "이 알림을 설정에서 끌 수 있습니다.",
+	"not-in-project": "어떤 프로젝트도 열려있지 않습니다!",
+	"custom-name": "커스텀 프로젝트명",
+	"custom-name-primary": "확인",
+	"custom-name-secondary": "기본값 사용"
 }
