Updated Debugging options, Added Custom ClientID, Fixed RPC-related bugs

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -39,6 +39,38 @@
 	"config-behaviour-preferType": "Prefer file type",
 	"config-behaviour-preferType-desc": "Send file type as description instead of file name.",
 	"config-behaviour-showFilenameOnLargeImage": "Show file name on large image",
+	"config-behaviour-showFilenameOnLargeImage-desc": "Send file name as large image instead of file type.",
 	"config-behaviour-updateTick": "Update tick",
-	"config-behaviour-updateTick-desc": "Interval between state update (ms)"
+	"config-behaviour-updateTick-desc": "Interval between state update (ms)",
+	"config-behaviour-alternativeIcon": "Atom Icon",
+	"config-behaviour-alternativeIcon-desc": "Select icon for small icons",
+	"config-behaviour-alternativeIcon-atom-original": "Original Atom Icon",
+	"config-behaviour-alternativeIcon-atom": "Atom Alternative Icon 1 (Monotone)",
+	"config-behaviour-alternativeIcon-atom-2": "Atom Alternative Icon 2 (Gradient)",
+	"config-behaviour-alternativeIcon-atom-3": "Atom Alternative Icon 3 (Polyhedron)",
+	"config-behaviour-alternativeIcon-atom-5": "Atom Alternative Icon 4 (Dark, Rhombus)",
+	"config-behaviour-useRestIcon": "Use rest icon",
+	"config-behaviour-useRestIcon-desc": "Use rest icon for idle status.",
+	"config-behaviour-customAppId": "Custom Client ID",
+	"config-behaviour-customAppId-desc": "Use custom app to change icon, app names. WARNING: changing this may result in Rich Presence malfunction",
+
+	"config-privacy": "Privacy",
+	"config-privacy-desc": "Select things to integrate",
+	"config-privacy-sendFilename": "Send File name",
+	"config-privacy-sendFilename-desc": "Integrate file name",
+	"config-privacy-sendProject": "Send Project name",
+	"config-privacy-sendProject-desc": "Integrate project name",
+	"config-privacy-sendFileType": "Send File type",
+	"config-privacy-sendFileType-desc": "Integrate type of files",
+	"config-privacy-sendElapsed": "Send Elapsed time",
+	"config-privacy-sendElapsed-desc": "Integrate elapsed time when you started coding",
+
+	"config-troubleshooting": "Trouble Shooting",
+	"config-troubleshooting-desc": "Options to handle discord integration troubles",
+	"config-troubleshooting-ubuntuPatch": "Patch Ubuntu 18.04 Bug",
+	"config-troubleshooting-ubuntuPatch-desc": "Patch Discord Rich Presence not showing on Ubuntu 18.04. Tick this when you installed discord from Ubuntu Software",
+	"config-troubleshooting-debugLog": "Debug Mode",
+	"config-troubleshooting-debugLog-desc": "Log debugging messages in atom-discord directory",
+	"config-troubleshooting-noDiscordNotification": "No Discord Notification",
+	"config-troubleshooting-noDiscordNotification-desc": "Show warning notification when discord is turned off or connection wasn't established"
 }
