--- a/i18n/ko-KR.json
+++ b/i18n/ko-KR.json
@@ -7,12 +7,14 @@
 	"type-description": "%type% 파일을 편집하고 있습니다.",
 	"type-unknown": "파일 편집 중",
 	"developer-idle": "개발자가 잠시 치킨을 뜯으러 간 것 같습니다.",
+
 	"generate-failed": "설정 디렉터리의 파일 %file% 생성하기에 실패했습니다.",
 	"generate-failed-desc": "파일 %file%(을)를 생성하는 중 에러가 발생했습니다.",
 	"read-failed": "설정 디렉터리의 파일 %file% 읽기에 실패했습니다.",
 	"read-failed-desc": "파일 %file%(을)를 읽는 중 에러가 발생했습니다.",
 	"write-failed": "설정 디렉터리의 파일 %file% 쓰기에 실패했습니다.",
 	"write-failed-desc": "파일 %file%(을)를 쓰는 중 에러가 발생했습니다.",
+
 	"error-is-file": "설정 디렉터리 내의 %directory% 폴더를 열 수 없습니다.",
 	"error-is-file-desc": "동일한 이름의 파일이 이미 존재합니다!",
 	"error-is-file-detail": "%directory%(을)를 체크해주세요.",
@@ -24,8 +26,51 @@
 	"error-no-discord-detail": "이 알림을 설정에서 끌 수 있습니다.",
 	"error-while-require": "디스코드 전송 코드 실행 중 오류가 발생했습니다! :(",
 	"error-while-require-desc": "Rich Presence가 보여지지 않을 것입니다. 하단의 오류와 함께 이슈에 올려주세요!",
+
 	"not-in-project": "어떤 프로젝트도 열려있지 않습니다!",
+
 	"custom-name": "커스텀 프로젝트명",
 	"custom-name-primary": "확인",
-	"custom-name-secondary": "기본값 사용"
+	"custom-name-secondary": "기본값 사용",
+
+	"config-behaviour": "동작 설정",
+	"config-behaviour-sendSmallImage": "작은 아톰 로고 이미지 표시",
+	"config-behaviour-sendLargeImage": "큰 파일 형식 이미지 표시",
+	"config-behaviour-preferType": "설명의 파일 형식 표시",
+	"config-behaviour-preferType-desc": "설명으로 파일의 이름 대신에 파일의 형식을 표시합니다.",
+	"config-behaviour-showFilenameOnLargeImage": "큰 이미지에 파일명 표시",
+	"config-behaviour-showFilenameOnLargeImage-desc": "큰 이미지에 파일의 형식 대신에 파일의 이름을 표시합니다.",
+	"config-behaviour-updateTick": "업데이트 주기",
+	"config-behaviour-updateTick-desc": "상태 업데이트 간의 간격 (ms)",
+	"config-behaviour-alternativeIcon": "아톰 아이콘",
+	"config-behaviour-alternativeIcon-desc": "작은 아톰 로고 선택",
+	"config-behaviour-alternativeIcon-atom-original": "기본 아톰 로고",
+	"config-behaviour-alternativeIcon-atom": "아톰 대체 로고 1 (단색)",
+	"config-behaviour-alternativeIcon-atom-2": "아톰 대체 로고 2 (그래디언트)",
+	"config-behaviour-alternativeIcon-atom-3": "아톰 대체 로고 3 (다면체)",
+	"config-behaviour-alternativeIcon-atom-5": "아톰 대체 로고 4 (어두운 마름모)",
+	"config-behaviour-useRestIcon": "휴식 아이콘 사용",
+	"config-behaviour-useRestIcon-desc": "아무것도 하고 있지 않을 때 휴식 아이콘을 표시합니다.",
+	"config-behaviour-customAppId": "커스텀 클라이언트 ID",
+	"config-behaviour-customAppId-desc": "커스텀 앱을 통해 앱 이름과 아이콘셋을 변경합니다. 주의사항: 이 값을 변경할 경우 Rich Presence가 잘 동작하지 않을 수 있습니다.",
+
+	"config-privacy": "개인정보",
+	"config-privacy-desc": "연동할 항목들을 선택합니다.",
+	"config-privacy-sendFilename": "파일명 표시",
+	"config-privacy-sendFilename-desc": "파일명을 연동합니다.",
+	"config-privacy-sendProject": "프로젝트명 표시",
+	"config-privacy-sendProject-desc": "프로젝트명을 연동합니다.",
+	"config-privacy-sendFileType": "파일 형식 표시",
+	"config-privacy-sendFileType-desc": "파일 형식을 연동합니다.",
+	"config-privacy-sendElapsed": "지난 시간 표시",
+	"config-privacy-sendElapsed-desc": "코딩을 시작한 때로부터 지난 시간을 표시합니다.",
+
+	"config-troubleshooting": "문제 해결",
+	"config-troubleshooting-desc": "디스코드 연동 문제를 해결하기 위한 옵션입니다.",
+	"config-troubleshooting-ubuntuPatch": "우분투 18.04 버그 패치",
+	"config-troubleshooting-ubuntuPatch-desc": "디스코드의 Rich Presence가 우분투 18.04에서 표시되지 않는 버그를 수정합니다. Ubuntu Software에서 디스코드를 다운로드한 경우 선택하세요.",
+	"config-troubleshooting-debugLog": "디버그 모드",
+	"config-troubleshooting-debugLog-desc": "atom-discord 폴더에 디버깅 메시지를 로깅합니다.",
+	"config-troubleshooting-noDiscordNotification": "디스코드 없음 알림",
+	"config-troubleshooting-noDiscordNotification-desc": "디스코드가 꺼졌거나 연동에 실패했을 경우에 알림을 표시합니다."
 }
