Fixed i18n-related bugs, Sending resting even if privacy option is turned on

--- a/i18n/ko-KR.json
+++ b/i18n/ko-KR.json
@@ -1,10 +1,10 @@
 {
-	"working-project": "%projectName% 프로젝트 작업 중",
-	"working-no-project": "할 것들 작업 중",
+	"working-project": "%projectName% 작업 중",
+	"working-no-project": "프로젝트 작업 중",
 	"editing-file": "%fileName% 편집 중",
 	"editing-idle": "쉬는 중",
 	"atom-description": "아톰으로 코딩 중",
-	"type-description": "%type% 파일을 편집하고 있습니다.",
+	"type-description": "%type% 파일 편집 중.",
 	"type-unknown": "파일 편집 중",
 	"developer-idle": "개발자가 잠시 치킨을 뜯으러 간 것 같습니다.",
 
@@ -36,7 +36,7 @@
 	"config-behaviour": "동작 설정",
 	"config-behaviour-sendSmallImage": "작은 아톰 로고 이미지 표시",
 	"config-behaviour-sendLargeImage": "큰 파일 형식 이미지 표시",
-	"config-behaviour-preferType": "설명의 파일 형식 표시",
+	"config-behaviour-preferType": "설명에 파일 형식 표시",
 	"config-behaviour-preferType-desc": "설명으로 파일의 이름 대신에 파일의 형식을 표시합니다.",
 	"config-behaviour-showFilenameOnLargeImage": "큰 이미지에 파일명 표시",
 	"config-behaviour-showFilenameOnLargeImage-desc": "큰 이미지에 파일의 형식 대신에 파일의 이름을 표시합니다.",
