Rewriting atom-discord, changed configs to customize all texts and images

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -34,36 +34,56 @@
 	"custom-name-secondary": "USE DEFAULT",
 
 	"config-behaviour": "Behaviour",
-	"config-behaviour-sendSmallImage": "Display small Atom logo",
-	"config-behaviour-sendLargeImage": "Display large file type image",
-	"config-behaviour-preferType": "Show file type on description",
-	"config-behaviour-preferType-desc": "Send file type as description instead of file name.",
-	"config-behaviour-showFilenameOnLargeImage": "Show file name on large image",
-	"config-behaviour-showFilenameOnLargeImage-desc": "Send file name as large image instead of file type.",
 	"config-behaviour-updateTick": "Update tick",
 	"config-behaviour-updateTick-desc": "Interval between state update (ms)",
-	"config-behaviour-alternativeIcon": "Atom Icon",
-	"config-behaviour-alternativeIcon-desc": "Select icon for small icons",
-	"config-behaviour-alternativeIcon-atom-original": "Original Atom Icon",
-	"config-behaviour-alternativeIcon-atom": "Atom Alternative Icon 1 (Monotone)",
-	"config-behaviour-alternativeIcon-atom-2": "Atom Alternative Icon 2 (Gradient)",
-	"config-behaviour-alternativeIcon-atom-3": "Atom Alternative Icon 3 (Polyhedron)",
-	"config-behaviour-alternativeIcon-atom-5": "Atom Alternative Icon 4 (Dark, Rhombus)",
-	"config-behaviour-useRestIcon": "Use rest icon",
-	"config-behaviour-useRestIcon-desc": "Use rest icon for idle status.",
 	"config-behaviour-customAppId": "Custom Client ID",
 	"config-behaviour-customAppId-desc": "Use custom app to change icon, app names. WARNING: changing this may result in Rich Presence malfunction",
 
-	"config-privacy": "Privacy",
-	"config-privacy-desc": "Select things to integrate",
-	"config-privacy-sendFilename": "Send File name",
-	"config-privacy-sendFilename-desc": "Integrate file name",
-	"config-privacy-sendProject": "Send Project name",
-	"config-privacy-sendProject-desc": "Integrate project name",
-	"config-privacy-sendFileType": "Send File type",
-	"config-privacy-sendFileType-desc": "Integrate type of files",
-	"config-privacy-sendElapsed": "Send Elapsed time",
-	"config-privacy-sendElapsed-desc": "Integrate elapsed time when you started coding",
+	"config-smallImage": "Small Image",
+	"config-smallImage-desc": "Change content of small image on Rich Presence",
+
+	"config-largeImage": "Large Image",
+	"config-smallImage-desc": "Change content of large image on Rich Presence",
+
+	"config-state": "State",
+	"config-state-desc": "Change content of primary text on Rich Presence",
+
+	"config-detail": "Detail",
+	"config-detail-desc": "Change content of secondary text on Rich Presence",
+
+	"config-elapsed": "Elapsed Time",
+	"config-elapsed-desc": "Change content of elapsed time on Rich Presence",
+	"config-elapsed-send": "Send Elapsed Time",
+	"config-elapsed-send-desc": "Tick this if you want to show elapsed time.",
+	"config-elapsed-handleRest": "Elapsed time when Rest",
+	"config-elapsed-handleRest-desc": "Change behavior when you're resting",
+	"config-elapsed-handleRest-disabled": "Default",
+	"config-elapsed-handleRest-disabled-desc": "Elapsed time increases even if you're resting",
+	"config-elapsed-handleRest-reset": "Reset",
+	"config-elapsed-handleRest-reset-desc": "Reset elapsed time when you're resting",
+	"config-elapsed-handleRest-pause": "Pause",
+	"config-elapsed-handleRest-pause-desc": "Pause elapsed time increasing while you're resting",
+
+	"config-rest": "Rest",
+	"config-rest-description": "Change behaviour while you're resting",
+	"config-rest-restOnBlur": "Rest on focus out",
+	"config-rest-restOnBlur-desc": "Change status to rest if atom is not focused.",
+	"config-rest-smallImage": "Small Image",
+	"config-rest-smallImage-desc": "Change the small image icon",
+	"config-rest-smallImageCustom": "Small Image Custom Key",
+	"config-rest-smallImageCustom-desc": "Set this to the custom key if you selected 'custom' on Small Image",
+	"config-rest-largeImage": "Large Image",
+	"config-rest-largeImage-desc": "Change the large image icon",
+	"config-rest-largeImageCustom": "Large Image Custom Key",
+	"config-rest-largeImageCustom-desc": "Set this to the custom key if you selected 'custom' on Large Image",
+	"config-rest-typeName": "Type Name",
+	"config-rest-typeName-desc": "This will be shown instead of the type.",
+	"config-rest-typeNameCustom": "Type Name Custom",
+	"config-rest-typeNameCustom-desc": "Set this to the custom text if you selected 'custom' on Type Name. %projectName% is supported.",
+	"config-rest-fileName": "File Name",
+	"config-rest-fileName-desc": "This will be shown instead of the filename.",
+	"config-rest-fileNameCustom": "File Name Custom",
+	"config-rest-fileNameCustom-desc": "Set this to the custom text if you selected 'custom' on File Name. %projectName% is supported.",
 
 	"config-troubleshooting": "Trouble Shooting",
 	"config-troubleshooting-desc": "Options to handle discord integration troubles",
