--- a/i18n/ko-KR.json
+++ b/i18n/ko-KR.json
@@ -4,7 +4,7 @@
 	"editing-file": "%fileName% 편집 중",
 	"editing-idle": "쉬는 중",
 	"atom-description": "아톰으로 코딩 중",
-	"type-description": "%type% 파일 편집 중.",
+	"type-description": "%type% 파일 편집 중",
 	"type-unknown": "파일 편집 중",
 	"developer-idle": "개발자가 잠시 치킨을 뜯으러 간 것 같습니다.",
 
