Fixed config bugs, rich presence not sending after rewrite

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -33,6 +33,29 @@
 	"custom-name-primary": "OK",
 	"custom-name-secondary": "USE DEFAULT",
 
+	"config-image": "Image",
+	"config-image-desc": "Change Image",
+	"config-imageCustom": "Image Custom",
+	"config-imageCustom-desc": "Set this to the custom key if you selected 'Custom' on Image",
+	"config-image-disabled": "No Image",
+	"config-image-currentType": "Filetype Icon",
+	"config-image-customImage": "Custom",
+	"config-image-atom-original": "Original Atom Icon",
+	"config-image-atom": "Atom Alternative Icon 1 (Monotone)",
+	"config-image-atom-2": "Atom Alternative Icon 2 (Gradient)",
+	"config-image-atom-3": "Atom Alternative Icon 3 (Polyhedron)",
+	"config-image-atom-5": "Atom Alternative Icon 4 (Dark, Rhombus)",
+	"config-image-text": "Text Icon",
+	"config-image-rest": "Rest Icon",
+	"config-image-default": "Default",
+
+	"config-text": "Text",
+	"config-text-desc": "Change Text",
+	"config-textCustom": "Text Custom",
+	"config-textCustom-desc": "Set this to the custom text if you selected 'Custom' on Text. %projectName%, %fileName%, %type% is supported.",
+	"config-text-disabled": "No Text",
+	"config-text-custom": "Custom",
+
 	"config-behaviour": "Behaviour",
 	"config-behaviour-updateTick": "Update tick",
 	"config-behaviour-updateTick-desc": "Interval between state update (ms)",
@@ -71,19 +94,19 @@
 	"config-rest-smallImage": "Small Image",
 	"config-rest-smallImage-desc": "Change the small image icon",
 	"config-rest-smallImageCustom": "Small Image Custom Key",
-	"config-rest-smallImageCustom-desc": "Set this to the custom key if you selected 'custom' on Small Image",
+	"config-rest-smallImageCustom-desc": "Set this to the custom key if you selected 'Custom' on Small Image",
 	"config-rest-largeImage": "Large Image",
 	"config-rest-largeImage-desc": "Change the large image icon",
 	"config-rest-largeImageCustom": "Large Image Custom Key",
-	"config-rest-largeImageCustom-desc": "Set this to the custom key if you selected 'custom' on Large Image",
+	"config-rest-largeImageCustom-desc": "Set this to the custom key if you selected 'Custom' on Large Image",
 	"config-rest-typeName": "Type Name",
 	"config-rest-typeName-desc": "This will be shown instead of the type.",
 	"config-rest-typeNameCustom": "Type Name Custom",
-	"config-rest-typeNameCustom-desc": "Set this to the custom text if you selected 'custom' on Type Name. %projectName% is supported.",
+	"config-rest-typeNameCustom-desc": "Set this to the custom text if you selected 'Custom' on Type Name. %projectName% is supported.",
 	"config-rest-fileName": "File Name",
 	"config-rest-fileName-desc": "This will be shown instead of the filename.",
 	"config-rest-fileNameCustom": "File Name Custom",
-	"config-rest-fileNameCustom-desc": "Set this to the custom text if you selected 'custom' on File Name. %projectName% is supported.",
+	"config-rest-fileNameCustom-desc": "Set this to the custom text if you selected 'Custom' on File Name. %projectName% is supported.",
 
 	"config-troubleshooting": "Trouble Shooting",
 	"config-troubleshooting-desc": "Options to handle discord integration troubles",
