Fixed #51, Fixed pause and timestamp-related bugs

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -84,13 +84,21 @@
 	"config-elapsed-handleRest-disabled-desc": "Elapsed time increases even if you're resting",
 	"config-elapsed-handleRest-reset": "Reset",
 	"config-elapsed-handleRest-reset-desc": "Reset elapsed time when you're resting",
+	"config-elapsed-handleRest-resetAfterDelay": "Reset After Delay",
+	"config-elapsed-handleRest-resetAfterDelay-desc": "Reset elapsed time when you're resting for a while.",
 	"config-elapsed-handleRest-pause": "Pause",
 	"config-elapsed-handleRest-pause-desc": "Pause elapsed time increasing while you're resting",
+	"config-elapsed-handleRestDelay": "Delay for 'Reset After Delay'",
+	"config-elapsed-handleRestDelay-desc": "If you selected 'Reset After Delay', resting more than this time(seconds) will reset the elapsed time.",
 
 	"config-rest": "Rest",
 	"config-rest-description": "Change behaviour while you're resting",
 	"config-rest-restOnBlur": "Rest on focus out",
 	"config-rest-restOnBlur-desc": "Change status to rest if atom is not focused.",
+	"config-rest-restOnAfk": "Rest on AFK (Away-From-Keyboard)",
+	"config-rest-restOnAfk-desc": "Change status to rest if there's no mouse or keyboard action for a while. (Needs restart atom)",
+	"config-rest-restOnAfkThreshold": "AFK Threshold",
+	"config-rest-restOnAfkThreshold-desc": "If you turned on 'Rest On AFK', no interactions more than this time(seconds) will set your status as 'rest'.",
 	"config-rest-smallImage": "Small Image",
 	"config-rest-smallImage-desc": "Change the small image icon",
 	"config-rest-smallImageCustom": "Small Image Custom Key",
