--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -1,60 +1,60 @@
 {
-	"working-project": "Pracuje na %projectName%",
-	"working-no-project": "Pracuje na projektu",
-	"editing-file": "Edituje %fileName%",
-	"editing-idle": "Odpočívá",
-	"atom-description": "Pracuje v Atomu",
-	"type-description": "Edituje %type% dokument",
-	"type-unknown": "Edituje dokument",
-	"developer-idle": "Tento vývojář dokáže i ODPOČÍVAT!",
+	"working-project": "Working on %projectName%",
+	"working-no-project": "Working on a project",
+	"editing-file": "Editing %fileName%",
+	"editing-idle": "Idle",
+	"atom-description": "Working with Atom",
+	"type-description": "Editing a %type% file",
+	"type-unknown": "Editing a file",
+	"developer-idle": "The Developer is RESTful enough to rest!",
 
-	"generate-failed": "Nemohu vygenerotav %file% v configu.",
-	"generate-failed-desc": "Prři generaci %file% nastal error.",
-	"read-failed": "Nemohu přečíst %file% v configu.",
-	"read-failed-desc": "Při čtení %file% nastal error.",
-	"write-failed": "Nemohu přepsat %file% v configu.",
-	"write-failed-desc": "Při přepisování %file% nastal error.",
+	"generate-failed": "Couldn't generate %file% in config directory.",
+	"generate-failed-desc": "While generating %file%, an error was thrown.",
+	"read-failed": "Couldn't read %file% in config directory.",
+	"read-failed-desc": "While reading %file%, an error was thrown.",
+	"write-failed": "Couldn't write %file% in config directory.",
+	"write-failed-desc": "While writing %file%, an error was thrown.",
 
-	"error-is-file": "Nemohu otevřít složku atom-discord.",
-	"error-is-file-desc": "atom-discord není složka, ale dokument!",
-	"error-is-file-detail": "Prosím zkontroluj %directory%.",
-	"error-is-directory": "Nemohu otevřít %file% v configu.",
-	"error-is-directory-desc": "%file% není dokument, ale adresář!",
-	"error-is-directory-detail": "Prosím zkontroluj %directory%.",
-	"error-no-discord": "Discord není spuštěn!",
-	"error-no-discord-desc": "Pokud není zaplý Discord a nerestaruješ atom, rich presence se nebude ukazovat.",
-	"error-no-discord-detail": "Toto oznámení můžete potlačit v nastavení.",
-	"error-while-require": "Nastal error při posílání kódu do Discordu! :(",
-	"error-while-require-desc": "Rich presence se nebude ukazovat. Prosím nahrajte tento problém na stracktrase.",
+	"error-is-file": "Couldn't open atom-discord folder in config directory.",
+	"error-is-file-desc": "atom-discord is not a folder, it is a file!",
+	"error-is-file-detail": "Please check %directory%.",
+	"error-is-directory": "Couldn't open %file% in config directory.",
+	"error-is-directory-desc": "%file% is not a file, but a directory!",
+	"error-is-directory-detail": "Please check %directory%.",
+	"error-no-discord": "Discord is not running!",
+	"error-no-discord-desc": "Unless discord is turned on and atom is restarted, rich presence will not be shown.",
+	"error-no-discord-detail": "You can suppress this notification in settings.",
+	"error-while-require": "Error while executing discord sending code! :(",
+	"error-while-require-desc": "Rich presence will not be shown. Please upload issue with this stacktrace.",
 
-	"not-in-project": "Žádný projekt není otevřený!",
+	"not-in-project": "No projects are opened!",
 
-	"custom-name": "Jméno projektu",
+	"custom-name": "Custom project name",
 	"custom-name-primary": "OK",
-	"custom-name-secondary": "USE VÝCHOZÍ",
+	"custom-name-secondary": "USE DEFAULT",
 
-	"config-image": "Obrázek",
-	"config-image-desc": "Změnit obrázek",
-	"config-imageCustom": "Vlastní obrázek",
-	"config-imageCustom-desc": "Nastavte toto na vlastní klíč pokud jste vybral/a 'Vlastní' v Obrázku",
-	"config-image-disabled": "Žádný obrázek",
-	"config-image-currentType": "Typ dokumentu",
-	"config-image-customImage": "Vlastní",
-	"config-image-atom-original": "Originální Atom Ikona",
-	"config-image-atom": "Alternativní Atom Ikona 1 (Monotone)",
-	"config-image-atom-2": "Alternativní Atom Ikona 1 (Gradient)",
-	"config-image-atom-3": "Alternativní Atom Ikona 1 (Polyhedron)",
-	"config-image-atom-5": "Alternativní Atom Ikona 1 (Dark, Rhombus)",
-	"config-image-text": "Textová Ikona",
-	"config-image-rest": "Odpočívací Ikona",
-	"config-image-default": "Výchozí",
+	"config-image": "Image",
+	"config-image-desc": "Change Image",
+	"config-imageCustom": "Image Custom",
+	"config-imageCustom-desc": "Set this to the custom key if you selected 'Custom' on Image",
+	"config-image-disabled": "No Image",
+	"config-image-currentType": "Filetype Icon",
+	"config-image-customImage": "Custom",
+	"config-image-atom-original": "Original Atom Icon",
+	"config-image-atom": "Atom Alternative Icon 1 (Monotone)",
+	"config-image-atom-2": "Atom Alternative Icon 2 (Gradient)",
+	"config-image-atom-3": "Atom Alternative Icon 3 (Polyhedron)",
+	"config-image-atom-5": "Atom Alternative Icon 4 (Dark, Rhombus)",
+	"config-image-text": "Text Icon",
+	"config-image-rest": "Rest Icon",
+	"config-image-default": "Default",
 
 	"config-text": "Text",
-	"config-text-desc": "Změnit Text",
-	"config-textCustom": "Vlastní Text",
+	"config-text-desc": "Change Text",
+	"config-textCustom": "Text Custom",
 	"config-textCustom-desc": "Set this to the custom text if you selected 'Custom' on Text. %projectName%, %fileName%, %type% is supported.",
-	"config-text-disabled": "Žádný text",
-	"config-text-custom": "Vlastní",
+	"config-text-disabled": "No Text",
+	"config-text-custom": "Custom",
 
 	"config-behaviour": "Behaviour",
 	"config-behaviour-updateTick": "Update tick",
@@ -120,7 +120,7 @@
 	"config-troubleshooting-desc": "Options to handle discord integration troubles",
 	"config-troubleshooting-ubuntuPatch": "Patch Ubuntu 18.04 Bug",
 	"config-troubleshooting-ubuntuPatch-desc": "Patch Discord Rich Presence not showing on Ubuntu 18.04. Tick this when you installed discord from Ubuntu Software",
-	"config-troubleshooting-debugLog": "Debug Mód",
+	"config-troubleshooting-debugLog": "Debug Mode",
 	"config-troubleshooting-debugLog-desc": "Log debugging messages in atom-discord directory",
 	"config-troubleshooting-noDiscordNotification": "No Discord Notification",
 	"config-troubleshooting-noDiscordNotification-desc": "Show warning notification when discord is turned off or connection wasn't established"
