--- a/i18n/cs-CZ.json
+++ b/i18n/cs-CZ.json
@@ -52,15 +52,15 @@
 	"config-text": "Text",
 	"config-text-desc": "Změnit Text",
 	"config-textCustom": "Vlastní Text",
-	"config-textCustom-desc": "Set this to the custom text if you selected 'Custom' on Text. %projectName%, %fileName%, %type% is supported.",
+	"config-textCustom-desc": "Nastavte toto na vlastní text pokud jste vybral/a 'Vlastní' v Textu. %projectName%, %fileName%, %type% jsou podporované.",
 	"config-text-disabled": "Žádný text",
 	"config-text-custom": "Vlastní",
 
-	"config-behaviour": "Behaviour",
-	"config-behaviour-updateTick": "Update tick",
-	"config-behaviour-updateTick-desc": "Interval between state update (ms)",
-	"config-behaviour-customAppId": "Custom Client ID",
-	"config-behaviour-customAppId-desc": "Use custom app to change icon, app names. WARNING: changing this may result in Rich Presence malfunction",
+	"config-behaviour": "Chování",
+	"config-behaviour-updateTick": "Aktualizační tick",
+	"config-behaviour-updateTick-desc": "Interval mezi aktualizacemi (ms)",
+	"config-behaviour-customAppId": "ID Vlastního Klienta",
+	"config-behaviour-customAppId-desc": "Použít vlastní aplikaci pro změnu ikon, názvů. WARNING: changing this may result in Rich Presence malfunction",
 
 	"config-smallImage": "Small Image",
 	"config-smallImage-desc": "Change content of small image on Rich Presence",
