--- a/i18n/cs-CZ.json
+++ b/i18n/cs-CZ.json
@@ -31,7 +31,7 @@
 
 	"custom-name": "Jméno projektu",
 	"custom-name-primary": "OK",
-	"custom-name-secondary": "USE VÝCHOZÍ",
+	"custom-name-secondary": "POUŽÍT VÝCHOZÍ",
 
 	"config-image": "Obrázek",
 	"config-image-desc": "Změnit obrázek",
@@ -60,31 +60,31 @@
 	"config-behaviour-updateTick": "Aktualizační tick",
 	"config-behaviour-updateTick-desc": "Interval mezi aktualizacemi (ms)",
 	"config-behaviour-customAppId": "ID Vlastního Klienta",
-	"config-behaviour-customAppId-desc": "Použít vlastní aplikaci pro změnu ikon, názvů. WARNING: changing this may result in Rich Presence malfunction",
+	"config-behaviour-customAppId-desc": "Použít vlastní aplikaci pro změnu ikon, názvů. VAROVÁNÍ: změna tohoto může změnit chování Rich Presence!",
 
-	"config-smallImage": "Small Image",
-	"config-smallImage-desc": "Change content of small image on Rich Presence",
+	"config-smallImage": "Malý obrázek",
+	"config-smallImage-desc": "Změní vzhled malého obrázku v Rich Presence",
 
-	"config-largeImage": "Large Image",
-	"config-smallImage-desc": "Change content of large image on Rich Presence",
+	"config-largeImage": "Velký obrázek",
+	"config-smallImage-desc": "Změní vzhled velkého obrázku v Rich Presence",
 
-	"config-state": "State",
-	"config-state-desc": "Change content of primary text on Rich Presence",
+	"config-state": "Činnost",
+	"config-state-desc": "Změní text v prvním řádku Rich Presence",
 
-	"config-detail": "Detail",
-	"config-detail-desc": "Change content of secondary text on Rich Presence",
+	"config-detail": "Detaily",
+	"config-detail-desc": "Změní text v druhém řádku Rich Presence",
 
-	"config-elapsed": "Elapsed Time",
-	"config-elapsed-desc": "Change content of elapsed time on Rich Presence",
-	"config-elapsed-send": "Send Elapsed Time",
-	"config-elapsed-send-desc": "Tick this if you want to show elapsed time.",
-	"config-elapsed-handleRest": "Elapsed time when Rest",
-	"config-elapsed-handleRest-desc": "Change behavior when you're resting",
-	"config-elapsed-handleRest-disabled": "Default",
-	"config-elapsed-handleRest-disabled-desc": "Elapsed time increases even if you're resting",
+	"config-elapsed": "Uplynulý Čas",
+	"config-elapsed-desc": "Změní text uplynulého času v Rich Presence",
+	"config-elapsed-send": "Poslat Uplynulý Čas",
+	"config-elapsed-send-desc": "Zaškrtněte toto, pokud chcebe aby se zobrazoval uplynulý čas.",
+	"config-elapsed-handleRest": "Uplynulý Čas při Resetu",
+	"config-elapsed-handleRest-desc": "Změní chování pri resetu",
+	"config-elapsed-handleRest-disabled": "Výchozí",
+	"config-elapsed-handleRest-disabled-desc": "Uplynulý čas se zvyšuje pokud resetujete",
 	"config-elapsed-handleRest-reset": "Reset",
-	"config-elapsed-handleRest-reset-desc": "Reset elapsed time when you're resting",
-	"config-elapsed-handleRest-resetAfterDelay": "Reset After Delay",
+	"config-elapsed-handleRest-reset-desc": "Resetovat uplynulý čas pri resetu",
+	"config-elapsed-handleRest-resetAfterDelay": "Reset po zpoždění",
 	"config-elapsed-handleRest-resetAfterDelay-desc": "Reset elapsed time when you're resting for a while.",
 	"config-elapsed-handleRest-pause": "Pause",
 	"config-elapsed-handleRest-pause-desc": "Pause elapsed time increasing while you're resting",
