--- a/i18n/cs-CZ.json
+++ b/i18n/cs-CZ.json
@@ -85,11 +85,11 @@
 	"config-elapsed-handleRest-reset": "Reset",
 	"config-elapsed-handleRest-reset-desc": "Resetovat uplynulý čas pri resetu",
 	"config-elapsed-handleRest-resetAfterDelay": "Reset po zpoždění",
-	"config-elapsed-handleRest-resetAfterDelay-desc": "Reset elapsed time when you're resting for a while.",
-	"config-elapsed-handleRest-pause": "Pause",
-	"config-elapsed-handleRest-pause-desc": "Pause elapsed time increasing while you're resting",
-	"config-elapsed-handleRestDelay": "Delay for 'Reset After Delay'",
-	"config-elapsed-handleRestDelay-desc": "If you selected 'Reset After Delay', resting more than this time(seconds) will reset the elapsed time.",
+	"config-elapsed-handleRest-resetAfterDelay-desc": "Resetovat uplynulý čas pokud odpočíváte delší dobu.",
+	"config-elapsed-handleRest-pause": "Pauza",
+	"config-elapsed-handleRest-pause-desc": "Zastavit uplynulý čas pokud odpočíváte",
+	"config-elapsed-handleRestDelay": "Zpoždění 'Resetovat po Zpoždění'",
+	"config-elapsed-handleRestDelay-desc": "Pokud jste vybrali 'Resetovat po zpoždění', resting more than this time(seconds) will reset the elapsed time.",
 
 	"config-rest": "Rest",
 	"config-rest-description": "Change behaviour while you're resting",
