--- a/i18n/cs-CZ.json
+++ b/i18n/cs-CZ.json
@@ -89,14 +89,14 @@
 	"config-elapsed-handleRest-pause": "Pauza",
 	"config-elapsed-handleRest-pause-desc": "Zastavit uplynulý čas pokud odpočíváte",
 	"config-elapsed-handleRestDelay": "Zpoždění 'Resetovat po Zpoždění'",
-	"config-elapsed-handleRestDelay-desc": "Pokud jste vybrali 'Resetovat po zpoždění', resting more than this time(seconds) will reset the elapsed time.",
+	"config-elapsed-handleRestDelay-desc": "Pokud jste vybrali 'Resetovat po zpoždění', pokud budete odpočívat déle jak (seconds) uplynulý čas se resetuje.",
 
-	"config-rest": "Rest",
-	"config-rest-description": "Change behaviour while you're resting",
-	"config-rest-restOnBlur": "Rest on focus out",
-	"config-rest-restOnBlur-desc": "Change status to rest if atom is not focused.",
-	"config-rest-restOnAfk": "Rest on AFK (Away-From-Keyboard)",
-	"config-rest-restOnAfk-desc": "Change status to rest if there's no mouse or keyboard action for a while. (Needs restart atom)",
+	"config-rest": "Odpočívání",
+	"config-rest-description": "Změní chování pokud odpočíváte",
+	"config-rest-restOnBlur": "Odpočívat pokud je atom na liště",
+	"config-rest-restOnBlur-desc": "Změní status pokud je atom na liště.",
+	"config-rest-restOnAfk": "Odpočívat po odchodu (AFK)",
+	"config-rest-restOnAfk-desc": "Změní status pokud chvíli nepoužíváte klávesnici nebo myš. (Vyžaduje restart atomu)",
 	"config-rest-restOnAfkThreshold": "AFK Threshold",
 	"config-rest-restOnAfkThreshold-desc": "If you turned on 'Rest On AFK', no interactions more than this time(seconds) will set your status as 'rest'.",
 	"config-rest-smallImage": "Small Image",
